# navier-stokes-lab

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/soc/: routes.py
docs/: report.md
scripts/: run_cavity.py  run_taylor_green.py  run_taylor_green_3d.py
src/navier_stokes_lab/: __init__.py  cavity.py
src/navier_stokes_lab.egg-info/: SOURCES.txt
src/navier_stokes_lab/scripts/: run_cavity_fast.py
src/ns/: cavity.py  solver.py  solver3d.py
tests/: test_cavity_smoke.py  test_divergence.py  test_energy_monotone.py  test_fft_poisson.py
